--- a/project-euler/Makefile
+++ b/project-euler/Makefile
@@ -8,3 +8,12 @@ all: 1 2
 
 3: 3.cpp
 	clang++ 3.cpp -o 3
+
+4--humans: 4--humans.cpp
+	clang++ 4--humans.cpp -o 4--humans
+
+4--ai--fotis: 4--ai--fotis.cpp
+	clang++ 4--ai--fotis.cpp -o 4--ai--fotis
+
+4--ai--bo: 4--ai--bo.cpp
+	clang++ 4--ai--bo.cpp -o 4--ai--bo
